Fixed the permission system. Added more debug logging. Renamed the label in the Forum Manager and Editor from Hidden to Active. Fixed a bug in compileTemplates() where it only loads visible forums from the forum store possibly causing trouble. Fixed a bug in the /topics/ route where super admin status wasn't being taken into consideration. Dropped down a hotfix for the /topics/ route.

--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -19,7 +19,7 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 			<div class="formitem"><input name="forum_desc" type="text" value="{{.Desc}}" placeholder="Where the general stuff happens" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem formlabel"><a>Hidden?</a></div>
+			<div class="formitem formlabel"><a>Active</a></div>
 			<div class="formitem"><select name="forum_active">
 				<option{{if not .Active}} selected{{end}} value="1">Yes</option>
 				<option{{if .Active}} selected{{end}} value="0">No</option>
