--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -47,10 +47,10 @@
 				<div class="formitem"><input name="forum-desc" type="text" placeholder="Where all the super secret stuff happens" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem formlabel"><a>Hidden?</a></div>
+				<div class="formitem formlabel"><a>Active</a></div>
 				<div class="formitem"><select name="forum-active">
-					<option value="0">Yes</option>
-					<option value="1">No</option>
+					<option value="1">Yes</option>
+					<option value="0">No</option>
 				</select></div>
 			</div>
 			<div class="formrow">
