Added the Update method to *Forum and fixed a bug where forum updates would bypass the forumView cache. Fixed a bug in MemoryForumStore's CacheSet where it requires new entries to exist, even though they don't need to. Fixed a bug where the Reports could be deleted. Fixed a bug in the JS where the inline forum editor stopped working. Fixed a bug in Shadow where the Add Group header was pushed to the side by the previous element's margin. Fixed a bug in the Forum Editor where the Active input's initial value was inverted.

--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -21,8 +21,8 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 		<div class="formrow">
 			<div class="formitem formlabel"><a>Active</a></div>
 			<div class="formitem"><select name="forum_active">
-				<option{{if not .Active}} selected{{end}} value="1">Yes</option>
-				<option{{if .Active}} selected{{end}} value="0">No</option>
+				<option{{if .Active}} selected{{end}} value="1">Yes</option>
+				<option{{if not .Active}} selected{{end}} value="0">No</option>
 			</select></div>
 		</div>
 		<div class="formrow">
