--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -39,7 +39,7 @@
 	<div class="colstack_item">
 		<form action="/panel/forums/create/?session={{.CurrentUser.Session}}" method="post">
 			<div class="formrow">
-				<div class="formitem formlabel"><a>Forum Name</a></div>
+				<div class="formitem formlabel"><a>Name</a></div>
 				<div class="formitem"><input name="forum-name" type="text" placeholder="Super Secret Forum" /></div>
 			</div>
 			<div class="formrow">
@@ -49,7 +49,7 @@
 			<div class="formrow">
 				<div class="formitem formlabel"><a>Active</a></div>
 				<div class="formitem"><select name="forum-active">
-					<option value="1">Yes</option>
+					<option selected value="1">Yes</option>
 					<option value="0">No</option>
 				</select></div>
 			</div>
