--- a/themes/shadow/public/main.css
+++ b/themes/shadow/public/main.css
@@ -483,19 +483,16 @@ input, select, textarea {
 	width: calc(100% - 14px);
 }
 
-.topic_button_row .formitem {
+.quick_button_row .formitem, .quick_create_form .upload_file_dock {
 	display: flex;
 }
-.topic_create_form .add_file_button {
+.quick_create_form .add_file_button {
 	margin-left: 8px;
 }
-.topic_create_form .close_form {
+.quick_create_form .close_form {
 	margin-left: auto;
 }
-.topic_create_form .upload_file_dock {
-	display: flex;
-}
-.topic_create_form .uploadItem {
+.quick_create_form .uploadItem {
 	display: inline-block;
 	margin-left: 8px;
 	background-size: 25px 30px;
@@ -564,6 +561,9 @@ input, select, textarea {
 	content: "Locked";
 }
 
+.topic_list .topic_row {
+	display: flex;
+}
 /* Temporary hack, so that I don't break the topic lists of the other themes */
 .topic_list .topic_inner_right {
 	display: none;
@@ -573,18 +573,34 @@ input, select, textarea {
 	overflow: hidden;
 }
 .topic_list .topic_left {
-	width: calc(100% - 284px);
+	width: 100%;
+	height: 59px;
+	display: flex;
+	padding: 0px;
+	overflow: hidden;
 }
 .topic_list .topic_right {
-	height: 35px;
+	height: 59px;
 	margin-left: 8px;
-	width: 108px;
+	display: flex;
+	width: 284px;
+	padding: 0px;
 }
-.topic_list .rowitem:last-child {
+.topic_list .topic_left img, .topic_list .topic_right img {
+	width: 64px;
+}
+.topic_list .topic_inner_left, .topic_right > span {
+	margin-left: 8px;
+	margin-top: 12px;
+}
+.topic_list .topic_row:last-child {
 	margin-bottom: 10px;
 }
 .topic_list .lastReplyAt {
 	white-space: nowrap;
+}
+.topic_list .starter:before {
+	content: "Starter: ";
 }
 
 .topic_name_input {
@@ -604,6 +620,10 @@ input, select, textarea {
 	margin-left: auto;
 	position: relative;
 	top: -5px;
+}
+
+.prev_link, .next_link {
+	display: none;
 }
 
 .postImage {
