--- a/themes/tempra-conflux/public/media.partial.css
+++ b/themes/tempra-conflux/public/media.partial.css
@@ -92,8 +92,21 @@
 }
 
 @media (max-width: 470px) {
-	ul { margin-bottom: 10px; }
-	.menu_overview, .menu_profile, .hide_on_micro { display: none; }
+	.container {
+		border: none;
+		background: none;
+		padding-right: 8px;
+	}
+	#back {
+		padding: 0px;
+	}
+	
+	ul {
+		margin-bottom: 10px;
+	}
+	.menu_overview, .menu_profile, .hide_on_micro {
+		display: none;
+	}
 	.selectedAlert .alertList {
 		width: 156px;
 		margin-bottom: 5px;
@@ -104,7 +117,9 @@
 		padding-left: 42px;
 		height: 46px;
 	}
-	.alertItem { padding: 8px; }
+	.alertItem {
+		padding: 8px;
+	}
 	.alertItem .text {
 		height: 30px;
 		font-size: 10px;
@@ -140,18 +155,26 @@
 		width: 60px;
 		font-size: 15px;
 	}
-	.userinfo { width: 70px; }
+	.userinfo {
+		width: 70px;
+		margin-left: 3px;
+	}
 	.userinfo .avatar_item {
 		background-size: 64px;
 		width: 64px;
 		min-height: 64px;
 	}
 	.content_container {
-		margin-left: 73px;
+		margin-left: 80px;
 		min-height: inherit !important;
 	}
-	.user_content { min-height: 76.5px !important; font-size: 15px; }
-	.user_content.nobuttons { min-height: 100.5px !important; }
+	.user_content {
+		min-height: 79.5px !important;
+		font-size: 15px;
+	}
+	.user_content.nobuttons {
+		min-height: 100.5px !important;
+	} /* UNUSED */
 	.the_name { font-size: 15px; }
 	.post_tag { font-size: 12px; }
 	.rowtopic { font-size: 14px; }
